--- a/style/main-style.css
+++ b/style/main-style.css
@@ -16,7 +16,8 @@ body {
 }
 
 header {
-  height: 100px;
+  height: 100%;
+  width: 100%;
   display: flex;
 }
 /*sidans logotype-Namn style*/
@@ -327,88 +328,157 @@ footer {
   font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
 }
 
-@media screen and (max-width: 830px) {
+@media screen and (max-width: 1023px) {
   #picture {
     width: 500px;
     padding: 10px;
   }
 
-  .container-logo {
-    display: none;
-  }
   .container {
     flex-direction: column-reverse;
   }
+
   #search {
     height: 125px;
     width: fit-content;
   }
+
   .container-island {
     flex-direction: column;
   }
+
+  header {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  .container-logo {
+    justify-content: flex-end;
+    align-items: center;
+  }
+
+  #logo {
+    padding: 0px;
+    margin-left: 2em;
+  }
 }
 
-@media screen and (max-width: 700px) {
-  #picture {
-    width: 400px;
-    padding: 10px;
+@media screen and (max-width: 767px) {
+  .container {
+    flex-direction: column-reverse;
   }
+
+  #search {
+    height: 125px;
+    width: fit-content;
+  }
+
+  .container-island {
+    flex-direction: column;
+  }
+
+  header {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
   #logoName {
-    font-size: 20px;
+    font-size: 30px;
   }
+
+  .container-logo {
+    justify-content: flex-start;
+    margin-top: -10px;
+  }
+
+  #logo {
+    padding: 0px;
+    margin-left: 2em;
+  }
+
+  #top {
+    background-color: #6e9cc1;
+    margin-top: 10px;
+  }
+
   #topText {
-    font-size: 10px;
+    font-size: 14px;
+    margin-left: 2em;
+    text-align: start;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    color: white;
   }
+
+  #islandTags {
+    color: white;
+  }
+
   .islandName {
     padding: 10px;
-    text-align: center;
+    text-align: start;
     font-size: 30px;
-    border-bottom: 2px dotted black;
+    margin-left: 10px;
+    border-bottom: none;
+    color: white;
   }
 
   .infoBox {
     font-size: 15px;
   }
+
   #adress {
     font-size: 10px;
+    margin: 0;
+    padding: 3px;
   }
+
   .copyright {
     font-size: 10px;
     align-items: center;
     padding: 3px;
   }
+
   .material-symbols-outlined {
     font-size: 14px;
   }
+
   .socmediaFooter {
     padding: 3px;
   }
 }
 
 @media screen and (max-width: 600px) {
-  .infoBox {
-    font-size: 10px;
-  }
-  #adress {
-    font-size: 10px;
-    margin: 0;
-    padding: 3px;
-  }
-  .material-symbols-outlined {
-    font-size: 14px;
-  }
-}
-
-@media screen and (max-width: 400px) {
   #picture {
     width: 300px;
     padding: 10px;
   }
-  .fa {
-    padding: 3px;
-    width: 20px;
-    text-align: center;
-    text-decoration: none;
-    border-radius: 40%;
+  .infoBox {
+    font-size: 10px;
+  }
+
+  #logoName {
+    font-size: 20px;
+  }
+
+  .islandName {
+    font-size: 20px;
+  }
+  #button-decoration {
+    font-size: 10px;
+  }
+
+  .socmediaFooter {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  #adress {
+    align-content: center;
+  }
+
+  #goTopButton {
+    font-size: 10px;
   }
 }
