--- a/style/main-style.css
+++ b/style/main-style.css
@@ -78,6 +78,7 @@ header {
   display: flex;
   flex-direction: column;
   margin-top: 10px;
+  width: 100%;
 }
 #topText {
   text-align: center;
@@ -290,6 +291,7 @@ footer {
   display: flex;
   flex-direction: row;
   border: 1px solid rgb(126, 126, 126);
+  width: 100%;
 }
 /*footer adress fält*/
 #adress {
