--- a/style/map.css
+++ b/style/map.css
@@ -93,7 +93,7 @@ header {
 }
 
 /*bild - lådan*/
-.islandContainer {
+.islandContainer2Map {
   display: flex;
   height: 100%;
   width: 100%;
@@ -133,7 +133,7 @@ header {
 
 /*Info och sök ruta*/
 
-#search {
+#searchMap {
   display: flex;
   flex-direction: column;
   border: 2px solid #6e9cc1;
@@ -143,12 +143,63 @@ header {
   background-color: #6e9cc1;
 }
 
-.decoration {
+#decorationMap {
   color: white;
   text-decoration: none;
+}
+
+#decorationMap:visited {
+  color: #d5dbe0;
+}
+#decorationMap:hover {
+  color: #125688;
 }
 
 #fsearch {
   border-radius: 5px;
   border: none;
+}
+
+@media screen and (max-width: 767px) {
+  .islandContainer2Map {
+    display: flex;
+    height: 695px;
+    width: 100%;
+    flex-direction: column-reverse;
+  }
+
+  #searchMap {
+    height: 110px;
+    width: fit-content;
+  }
+
+  #map {
+    width: 640px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .islandContainer2Map {
+    display: flex;
+    height: 497px;
+    width: 100%;
+    flex-direction: column-reverse;
+  }
+
+  #decorationMap {
+    font-size: 13px;
+  }
+
+  #signText {
+    font-size: 15px;
+  }
+
+  #searchMap {
+    height: 110px;
+    width: fit-content;
+  }
+
+  #map {
+    width: 315px;
+  }
 }
