--- a/style/islands-style.css
+++ b/style/islands-style.css
@@ -116,7 +116,7 @@ header {
   height: fit-content;
   padding: 10px;
 }
-.flex-button {
+.flex-buttonIslands {
   display: flex;
   flex-direction: column;
 }
@@ -185,4 +185,75 @@ header {
 
 #seagul {
   margin-left: 20px;
+  height: 50px;
+}
+
+@media screen and (max-width: 1023px) {
+  .islandContainer1 {
+    display: flex;
+    flex-direction: column-reverse;
+    height: 100%;
+    width: 100%;
+  }
+
+  #islandChild {
+    flex: 3;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+  }
+
+  .islandPage {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin: 20px;
+  }
+
+  #bigPicture {
+    width: 300px;
+    height: fit-content;
+    padding: 10px;
+  }
+
+  .textPicture {
+    flex-wrap: wrap-reverse;
+  }
+
+  #moreText {
+    font-size: 10px;
+    margin-top: 20px;
+    margin-left: 25px;
+    margin-right: 20px;
+  }
+
+  #islandText1 {
+    font-size: 10px;
+  }
+
+  .islandText2 {
+    font-size: 10px;
+    margin-top: -10px;
+    margin-left: 25px;
+    margin-right: 20px;
+  }
+
+  #smallPicture {
+    width: 100px;
+    margin-left: 125px;
+  }
+
+  #koordinat {
+    font-size: 10px;
+  }
+
+  #seagul {
+    margin-left: 0px;
+    height: 30px;
+  }
+
+  .flex-button {
+    margin-left: 20px;
+  }
 }
