--- a/style/main-style.css
+++ b/style/main-style.css
@@ -79,6 +79,7 @@ header {
   flex-direction: column;
   margin-top: 10px;
   width: 100%;
+  height: 100%;
 }
 #topText {
   text-align: center;
@@ -96,11 +97,6 @@ header {
 }
 
 /*infosidor om öarna med länkar*/
-.islandContainer2 {
-  display: flex;
-  height: 341px;
-}
-
 .container {
   display: flex;
 }
@@ -223,41 +219,6 @@ header {
   flex-direction: column;
   width: 100%;
   height: 100%;
-}
-
-.islandPage {
-  display: flex;
-  flex-direction: row;
-  margin: 20px;
-}
-
-#bigPicture {
-  width: 400px;
-  height: fit-content;
-  padding: 10px;
-}
-
-#islandText1 {
-  margin: 5px;
-}
-
-.islandText2 {
-  margin-left: 31px;
-  margin-top: -10px;
-}
-
-.textPicture {
-  display: flex;
-}
-
-#moreText {
-  margin-left: 31px;
-}
-
-#smallPicture {
-  width: 210px;
-  height: fit-content;
-  margin-left: 40px;
 }
 
 /*information text över footer på första sidan*/
@@ -482,5 +443,14 @@ footer {
 
   #goTopButton {
     font-size: 10px;
+  }
+
+  #decoration {
+    font-size: 13px;
+  }
+
+  #search {
+    height: 110px;
+    width: fit-content;
   }
 }
